# gTest-demo

./: CMakeLists.txt  README.md  main.cpp
cmake/: wxh_arm.cmake  wxh_x86.cmake
